<resources>
    <string name="app_name">Last_Chat</string>
    <string name="email_not_valid">Your email is bad !!! Please check again</string>
    <string name="password_not_valid">Password is not valid !!! Please check again</string>
    <string name="pw_new_pw_not_match">Old password and new password is not matches!!! Please check again</string>
    <string name="res_successfully">Register successfully</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="friend">Friend</string>
    <string name="personal">Personal</string>
    <string name="avatar">Avatar</string>
    <string name="see_avatar">See avatar</string>
    <string name="get_new_image">Get new image</string>
    <string name="choose_stored_image">Choose stored image</string>
    <string name="add_introduce">Add introduce myself</string>
    <string name="may_you_know">People may you know</string>
    <string name="discovery">Discovery</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome to EZChat.\nPlease follow these House Rules.</string>
    <string name="be_yourself">Be yourself.</string>
    <string name="make_sure_photos">Make sure your photos, and bio are true to who\nyou are.</string>
    <string name="play_it_cool">Play it cool</string>
    <string name="respect">Respect others and treat them as you would like to\nbe treated</string>
    <string name="stay_safe">Stay safe</string>
    <string name="dont_quick">Don\'t be quick to give out personal information.</string>
    <string name="be_proactive">Be proactive.</string>
    <string name="always_report">Always report bad behavior</string>
    <string name="got_it">Got it</string>
    <string name="my_first_name">My first\nname is</string>
    <string name="how_the_fuck">This is how it will appear in EzChat</string>
    <string name="_continue">Continue</string>
    <string name="_birthday">My\nbirthday is</string>
    <string name="_iam">I am a</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="new_friend">NEW</string>
    <string name="accept_request">accept</string>
    <string name="cancel_request">cancel</string>
    <string name="friend_request">Friend Request</string>
    <string name="empty_request">No new requests</string>
    <string name="notice_connect">You are now connected on EzChat</string>
    <string name="notice">Don\'t waste your time. \n Let\'s say hello</string>
    <string name="not_type">You don\'t type anything</string>
    <string name="choose_image">Choose Image</string>
    <string name="title_info_user">Information User</string>
    <string name="sign_up_full_name">User name</string>
    <string name="sign_up_gender">Gender</string>
    <string name="sign_up_male">Male</string>
    <string name="sign_up_female">Female</string>
    <string name="sign_up_birthday">Birthday</string>
    <string name="bio">Biography</string>
</resources>
