<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_32dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textFirst"
        style="@style/TextViewBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_iam"
        android:textSize="@dimen/_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonWoman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gender"
        android:paddingStart="@dimen/_64dp"
        android:paddingEnd="@dimen/_64dp"
        android:text="@string/woman"
        app:layout_constraintBottom_toTopOf="@id/buttonMan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFirst"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonMan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/bg_gender"
        android:paddingStart="@dimen/_64dp"
        android:paddingEnd="@dimen/_64dp"
        android:text="@string/man"
        app:layout_constraintBottom_toTopOf="@id/buttonContinue"
        app:layout_constraintEnd_toEndOf="@id/buttonWoman"
        app:layout_constraintStart_toStartOf="@id/buttonWoman"
        app:layout_constraintTop_toBottomOf="@id/buttonWoman"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:paddingStart="@dimen/_64dp"
        android:paddingEnd="@dimen/_64dp"
        android:text="@string/_continue"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
