<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:padding="@dimen/_4dp">

    <include
        android:id="@+id/toolbarEditUserProfile"
        layout="@layout/toolbar_profile" />

    <View
        android:id="@+id/separateToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:background="@color/color_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarEditUserProfile" />

    <TextView
        android:id="@+id/text_modify"
        style="@style/TextViewMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:gravity="center"
        android:text="@string/title_info_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separateToolbar" />

    <TextView
        android:id="@+id/textNameModify"
        style="@style/TextViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up_full_name"
        app:layout_constraintBottom_toBottomOf="@id/editNameProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/editNameProfile" />

    <EditText
        android:id="@+id/editNameProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@id/textNameModify"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_modify" />

    <TextView
        android:id="@+id/textGenderModify"
        style="@style/TextViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up_gender"
        app:layout_constraintBottom_toBottomOf="@id/radioGroupEditUserProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/radioGroupEditUserProfile" />

    <RadioGroup
        android:id="@+id/radioGroupEditUserProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="@id/editNameProfile"
        app:layout_constraintLeft_toRightOf="@+id/textGender"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNameProfile"
        tools:ignore="UnknownIdInLayout">

        <RadioButton
            android:id="@+id/radioMaleEditUserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up_male" />

        <RadioButton
            android:id="@+id/radioFemaleEditUserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up_female" />
    </RadioGroup>

    <TextView
        android:id="@+id/textAgeModify"
        style="@style/TextViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up_birthday"
        app:layout_constraintBottom_toBottomOf="@+id/editAgeProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/editAgeProfile" />

    <TextView
        android:id="@+id/editAgeProfile"
        style="@style/TextViewMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/radioGroupEditUserProfile"
        app:layout_constraintLeft_toRightOf="@id/textAgeModify"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupEditUserProfile" />

    <TextView
        android:id="@+id/textBioProfile"
        style="@style/TextViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/bio"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAgeProfile" />

    <EditText
        android:id="@+id/editBioEditUser"
        style="@style/TextViewMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textBioProfile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBioProfile" />

    <ProgressBar
        android:id="@+id/progessEditUserProfile"
        android:layout_width="@dimen/_56dp"
        android:layout_height="@dimen/_56dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>