<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_32dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textFirst"
        style="@style/TextViewBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_first_name"
        android:textSize="@dimen/_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editName"
        style="@style/TextViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="User name"
        app:layout_constraintBottom_toTopOf="@id/textHow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFirst"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textHow"
        style="@style/TextViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_the_fuck"
        app:layout_constraintBottom_toTopOf="@id/buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editName"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:paddingStart="@dimen/_64dp"
        android:paddingEnd="@dimen/_64dp"
        android:text="@string/_continue"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
